--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.01MB/s(Youtube:不良林), server: tt1.tjvpn.top, port: 2022, type: trojan, password: 0cb2cd1f-870b-485c-914a-60aba39eed39, sni: tt1.tjvpn.top, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-367.7KB/s(Youtube:不良林), server: 5.183.176.92, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-1.28MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-1.67MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-931.4KB/s(Youtube:不良林), server: 5.183.176.92, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-942.8KB/s(Youtube:不良林), server: 5.183.176.92, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-474.5KB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 45379, type: trojan, password: d73e7fe4-88d2-4d9a-81c8-c9a97bbc1b84, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.24MB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-400.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.00MB/s(Youtube:不良林), server: 5.183.176.92, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-4.10MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.71MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-897.7KB/s(Youtube:不良林), server: 5.183.176.92, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-845.9KB/s(Youtube:不良林), server: 5.183.176.92, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-691.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.03MB/s(Youtube:不良林), server: 5.183.176.92, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-315.1KB/s(Youtube:不良林), server: 5.183.176.92, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-367.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-931.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-942.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-367.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-931.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-942.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-367.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-931.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-942.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-367.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-931.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-942.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-367.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-931.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-942.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-367.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-931.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-942.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-367.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-931.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-942.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-474.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
