--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.24MB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-400.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.00MB/s(Youtube:不良林), server: 5.183.176.92, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.10MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.71MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-897.7KB/s(Youtube:不良林), server: 5.183.176.92, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.88MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-845.9KB/s(Youtube:不良林), server: 5.183.176.92, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-691.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-313.2KB/s(Youtube:不良林), server: 185.172.113.108, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.24MB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-1.28MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-1.03MB/s(Youtube:不良林), server: 5.183.176.92, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-315.1KB/s(Youtube:不良林), server: 5.183.176.92, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-1.37MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇸🇬 新加坡-2.12MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 2aef06f4-6fa1-3fe4-9c08-8bdbd2cefe4e, sni: sg1.jjzgy.live, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-400.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-897.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
       - 🇯🇵 日本-845.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-691.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-315.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.12MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
